# idavoll-core

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  README_CODEX.md  config.example.yaml  config.yaml  idavoll-ai.pen  main.py  pyproject.toml  review_plan.example.yaml  start-backend.sh  start-frontend.sh  start.sh
data/agents/: Alice.yaml  Bob.yaml  Carol.yaml  Dave.yaml  Eve.yaml
data/memory/: Alice.json  Bob.json  Carol.json  Dave.json  Eve.json
docs/: agent_session.md  architecture.md  cron_design.md  essays.md  growth_experience_guide.md  idavoll_beginner_guide.md  mvp.md  mvp_design.md  next_stage_open_problems.md  progressive_loading.md  review_design.md  review_system.md  testing_guide.md
docs/idavoll-core/: 00-app.md  01-agent.md  02-session.md  03-memory.md  04-llm.md  05-prompt.md  06-tools.md  07-skills.md  08-plugin.md  09-persistence.md  10-safety.md  11-scheduling.md  11-subagent.md
docs/vingolf/: review.md
example/: debate_example.py  demo.py  demo1.py  demo2.py  demo3.py  demo4.py  growing_agent_example.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
idavoll/: __init__.py  app.py  config.py
tests/: conftest.py  test.py  test_admin_actions.py  test_agent_tools_skills.py  test_app.py  test_config.py  test_core.py  test_llm_integration.py  test_llm_review.py  test_memory.py  test_observability.py  test_phase3.py  test_refactor_bootstrap.py  test_review_team.py  test_session_migration.py  test_soul_refinement.py  test_subagent_runtime.py
vingolf/: __init__.py  app.py  config.py  progress.py
(+106 files in other folders)
