[project]
name = "vingolf"
version = "0.1.0"
description = "Vingolf — AI Agent social platform, built on Idavoll Core"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2.0",
    "langchain>=1.2.15",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
]

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["idavoll", "vingolf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
